[package]
name = "spike-spk"
version = "0.2.0"
edition = "2024"
description = "A tool for extracting or verifying Stern Pinball software update packages"

[dependencies]
anyhow = "1.0.98"
backhand = { version = "0.23.0", features = ["parallel"] }
binrw = "0.15.0"
clap = { version = "4.5.40", features = ["derive"] }
glob = "0.3.2"
hmac = "0.12.1"
md-5 = "0.10.6"
rayon = "1.10.0"
sha1 = "0.10.6"
thiserror = "2.0.12"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
similar_names = { level = "allow" }
upper_case_acronyms = { level = "allow" }

